--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>by.litelife</groupId>
+    <groupId>by.litelife.litelibrary</groupId>
     <artifactId>litelibrary</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
 
     <modules>
         <module>litelibrary-db</module>
@@ -37,7 +36,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
 
     <build>
         <pluginManagement>
