Introduce a resources module

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>litelibrary-db</module>
+        <module>litelibrary-resources</module>
     </modules>
 
     <properties>
