--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <!--dependencies-->
         <mysql-connector-java.version>6.0.5</mysql-connector-java.version>
+        <log4j.version>1.2.17</log4j.version>
 
         <!--plugins-->
         <sql-maven-plugin.version>1.5</sql-maven-plugin.version>
@@ -34,6 +35,11 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector-java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
